src/parser/grammar/parser.js
// @generated by Peggy 5.0.6.
//
// https://peggyjs.org/


class peg$SyntaxError extends SyntaxError {
  constructor(message, expected, found, location) {
    super(message);
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";
  }

  format(sources) {
    let str = "Error: " + this.message;
    if (this.location) {
      let src = null;
      const st = sources.find(s => s.source === this.location.source);
      if (st) {
        src = st.text.split(/\r\n|\n|\r/g);
      }
      const s = this.location.start;
      const offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
        ? this.location.source.offset(s)
        : s;
      const loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
      if (src) {
        const e = this.location.end;
        const filler = "".padEnd(offset_s.line.toString().length, " ");
        const line = src[s.line - 1];
        const last = s.line === e.line ? e.column : line.length + 1;
        const hatLen = (last - s.column) || 1;
        str += "\n --> " + loc + "\n"
            + filler + " |\n"
            + offset_s.line + " | " + line + "\n"
            + filler + " | " + "".padEnd(s.column - 1, " ")
            + "".padEnd(hatLen, "^");
      } else {
        str += "\n at " + loc;
      }
    }
    return str;
  }

  static buildMessage(expected, found) {
    function hex(ch) {
      return ch.codePointAt(0).toString(16).toUpperCase();
    }

    const nonPrintable = Object.prototype.hasOwnProperty.call(RegExp.prototype, "unicode")
      ? new RegExp("[\\p{C}\\p{Mn}\\p{Mc}]", "gu")
      : null;
    function unicodeEscape(s) {
      if (nonPrintable) {
        return s.replace(nonPrintable,  ch => "\\u{" + hex(ch) + "}");
      }
      return s;
    }

    function literalEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    function classEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return "\"" + literalEscape(expectation.text) + "\"";
      },

      class(expectation) {
        const escapedParts = expectation.parts.map(
          part => (Array.isArray(part)
            ? classEscape(part[0]) + "-" + classEscape(part[1])
            : classEscape(part))
        );

        return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]" + (expectation.unicode ? "u" : "");
      },

      any() {
        return "any character";
      },

      end() {
        return "end of input";
      },

      other(expectation) {
        return expectation.description;
      },
    };

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      const descriptions = expected.map(describeExpectation);
      descriptions.sort();

      if (descriptions.length > 0) {
        let j = 1;
        for (let i = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};
  const peg$source = options.grammarSource;

  const peg$startRuleFunctions = {
    Parser: peg$parseParser,
  };
  let peg$startRuleFunction = peg$parseParser;

  const peg$c0 = "#";
  const peg$c1 = "/*";
  const peg$c2 = "*/";
  const peg$c3 = "import";
  const peg$c4 = "shader";
  const peg$c5 = "from";
  const peg$c6 = "input";
  const peg$c7 = "=";
  const peg$c8 = "let";
  const peg$c9 = "output";
  const peg$c10 = "to";
  const peg$c11 = ",";
  const peg$c12 = "format";
  const peg$c13 = "resolution";
  const peg$c14 = "codec";
  const peg$c15 = "fps";
  const peg$c16 = "bitrate";
  const peg$c17 = ":";
  const peg$c18 = "[";
  const peg$c19 = "-";
  const peg$c20 = "]";
  const peg$c21 = "end";
  const peg$c22 = "frame";
  const peg$c23 = "0:";
  const peg$c24 = "s";
  const peg$c25 = "ms";
  const peg$c26 = "f";
  const peg$c27 = "sec";
  const peg$c28 = "seconds";
  const peg$c29 = "\n";
  const peg$c30 = ".";
  const peg$c31 = "Trim";
  const peg$c32 = "(";
  const peg$c33 = ")";
  const peg$c34 = "Resize";
  const peg$c35 = "Speed";
  const peg$c36 = "Loop";
  const peg$c37 = "Opacity";
  const peg$c38 = "audio";
  const peg$c39 = "volume";
  const peg$c40 = "fade_in";
  const peg$c41 = "fade_out";
  const peg$c42 = "text";
  const peg$c43 = "style";
  const peg$c44 = "position";
  const peg$c45 = "color";
  const peg$c46 = "stroke";
  const peg$c47 = "stroke_width";
  const peg$c48 = "font";
  const peg$c49 = "size";
  const peg$c50 = "animation";
  const peg$c51 = "filter";
  const peg$c52 = "Overlay";
  const peg$c53 = "Composite";
  const peg$c54 = "mode";
  const peg$c55 = "opacity";
  const peg$c56 = "fn";
  const peg$c57 = "{";
  const peg$c58 = "}";
  const peg$c59 = "\"";
  const peg$c60 = "\\";
  const peg$c61 = "'";
  const peg$c62 = "true";
  const peg$c63 = "false";

  const peg$r0 = /^[ \t\r\n]/;
  const peg$r1 = /^[^\n]/;
  const peg$r2 = /^[x-y]/;
  const peg$r3 = /^[+\-]/;
  const peg$r4 = /^[a-zA-Z_]/;
  const peg$r5 = /^[a-zA-Z0-9_]/;
  const peg$r6 = /^[0-9]/;
  const peg$r7 = /^[^"\\]/;
  const peg$r8 = /^[^'\\]/;

  const peg$e0 = peg$classExpectation([" ", "\t", "\r", "\n"], false, false, false);
  const peg$e1 = peg$literalExpectation("#", false);
  const peg$e2 = peg$classExpectation(["\n"], true, false, false);
  const peg$e3 = peg$literalExpectation("/*", false);
  const peg$e4 = peg$literalExpectation("*/", false);
  const peg$e5 = peg$anyExpectation();
  const peg$e6 = peg$literalExpectation("import", false);
  const peg$e7 = peg$literalExpectation("shader", false);
  const peg$e8 = peg$literalExpectation("from", false);
  const peg$e9 = peg$literalExpectation("input", false);
  const peg$e10 = peg$literalExpectation("=", false);
  const peg$e11 = peg$literalExpectation("let", false);
  const peg$e12 = peg$literalExpectation("output", false);
  const peg$e13 = peg$literalExpectation("to", false);
  const peg$e14 = peg$literalExpectation(",", false);
  const peg$e15 = peg$literalExpectation("format", false);
  const peg$e16 = peg$literalExpectation("resolution", false);
  const peg$e17 = peg$literalExpectation("codec", false);
  const peg$e18 = peg$literalExpectation("fps", false);
  const peg$e19 = peg$literalExpectation("bitrate", false);
  const peg$e20 = peg$literalExpectation(":", false);
  const peg$e21 = peg$literalExpectation("[", false);
  const peg$e22 = peg$literalExpectation("-", false);
  const peg$e23 = peg$literalExpectation("]", false);
  const peg$e24 = peg$literalExpectation("end", false);
  const peg$e25 = peg$literalExpectation("frame", false);
  const peg$e26 = peg$literalExpectation("0:", false);
  const peg$e27 = peg$literalExpectation("s", false);
  const peg$e28 = peg$literalExpectation("ms", false);
  const peg$e29 = peg$literalExpectation("f", false);
  const peg$e30 = peg$literalExpectation("sec", false);
  const peg$e31 = peg$literalExpectation("seconds", false);
  const peg$e32 = peg$literalExpectation("\n", false);
  const peg$e33 = peg$literalExpectation(".", false);
  const peg$e34 = peg$literalExpectation("Trim", false);
  const peg$e35 = peg$literalExpectation("(", false);
  const peg$e36 = peg$literalExpectation(")", false);
  const peg$e37 = peg$literalExpectation("Resize", false);
  const peg$e38 = peg$literalExpectation("Speed", false);
  const peg$e39 = peg$literalExpectation("Loop", false);
  const peg$e40 = peg$literalExpectation("Opacity", false);
  const peg$e41 = peg$literalExpectation("audio", false);
  const peg$e42 = peg$literalExpectation("volume", false);
  const peg$e43 = peg$literalExpectation("fade_in", false);
  const peg$e44 = peg$literalExpectation("fade_out", false);
  const peg$e45 = peg$literalExpectation("text", false);
  const peg$e46 = peg$literalExpectation("style", false);
  const peg$e47 = peg$literalExpectation("position", false);
  const peg$e48 = peg$literalExpectation("color", false);
  const peg$e49 = peg$literalExpectation("stroke", false);
  const peg$e50 = peg$literalExpectation("stroke_width", false);
  const peg$e51 = peg$literalExpectation("font", false);
  const peg$e52 = peg$literalExpectation("size", false);
  const peg$e53 = peg$literalExpectation("animation", false);
  const peg$e54 = peg$literalExpectation("filter", false);
  const peg$e55 = peg$literalExpectation("Overlay", false);
  const peg$e56 = peg$literalExpectation("Composite", false);
  const peg$e57 = peg$classExpectation([["x", "y"]], false, false, false);
  const peg$e58 = peg$literalExpectation("mode", false);
  const peg$e59 = peg$literalExpectation("opacity", false);
  const peg$e60 = peg$classExpectation(["+", "-"], false, false, false);
  const peg$e61 = peg$literalExpectation("fn", false);
  const peg$e62 = peg$literalExpectation("{", false);
  const peg$e63 = peg$literalExpectation("}", false);
  const peg$e64 = peg$classExpectation([["a", "z"], ["A", "Z"], "_"], false, false, false);
  const peg$e65 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false, false);
  const peg$e66 = peg$classExpectation([["0", "9"]], false, false, false);
  const peg$e67 = peg$literalExpectation("\"", false);
  const peg$e68 = peg$classExpectation(["\"", "\\"], true, false, false);
  const peg$e69 = peg$literalExpectation("\\", false);
  const peg$e70 = peg$literalExpectation("'", false);
  const peg$e71 = peg$classExpectation(["'", "\\"], true, false, false);
  const peg$e72 = peg$literalExpectation("true", false);
  const peg$e73 = peg$literalExpectation("false", false);

  function peg$f0(statements) {
    var filtered = [];
    for (var i = 0; i < statements.length; i++) {
      if (statements[i][0] !== null) filtered.push(statements[i][0]);
    }
    return { type: 'Program', statements: filtered };
  }
  function peg$f1() {    return null;  }
  function peg$f2() {    return null;  }
  function peg$f3() {    return null;  }
  function peg$f4(name, path) {
    return { type: 'ImportShader', name, path };
  }
  function peg$f5(name, path) {
    return { type: 'Input', name, path };
  }
  function peg$f6(name, value) {
    return { type: 'Variable', name, value };
  }
  function peg$f7(path, options) {
    return { type: 'Output', path, options: options || {} };
  }
  function peg$f8(head, tail) {
    return tail.reduce(function(acc, item) { return { ...acc, [item[3].key]: item[3].value }; }, head);
  }
  function peg$f9(key, value) {
    return { key, value: String(value) };
  }
  function peg$f10(start, end, instructions) {
    return { type: 'TimeBlock', start, end, instructions };
  }
  function peg$f11(start, instructions) {
    return { type: 'TimeBlock', start, end: { value: Infinity, raw: 'end' }, instructions };
  }
  function peg$f12(value) {    return { value, raw: text(), loc: location() };  }
  function peg$f13(num, unit) {
    const unitMap = { s: 1, ms: 0.001, f: 1/30 };
    return num * (unitMap[unit] || 1);
  }
  function peg$f14(num) {    return num / 30;  }
  function peg$f15(min, sec) {    return min * 60 + sec;  }
  function peg$f16(hour, min, sec) {    return hour * 3600 + min * 60 + sec;  }
  function peg$f17(head, tail) {
    return [head, ...tail.map(function(t) { return t[3]; })];
  }
  function peg$f18(target, params) {
    return { type: 'VideoTrim', target, params };
  }
  function peg$f19(target, width, height) {
    return { type: 'VideoResize', target, width, height };
  }
  function peg$f20(target, factor) {
    return { type: 'VideoSpeed', target, factor };
  }
  function peg$f21(target, count) {
    return { type: 'VideoLoop', target, count };
  }
  function peg$f22(target, value, duration) {
    return { type: 'VideoOpacity', target, value, duration };
  }
  function peg$f23(name, params) {
    return { type: 'Audio', name, params };
  }
  function peg$f24(head, tail) {
    return tail.reduce(function(acc, item) { return { ...acc, [item[3].key]: item[3].value }; }, head);
  }
  function peg$f25(key, value) {
    return { key, value };
  }
  function peg$f26(content, params) {
    return { type: 'Text', content, params };
  }
  function peg$f27(head, tail) {
    return tail.reduce(function(acc, item) { return { ...acc, [item[3].key]: item[3].value }; }, head);
  }
  function peg$f28(key, value) {
    return { key, value };
  }
  function peg$f29(name, params) {
    return { type: 'Filter', name, params };
  }
  function peg$f30(head, tail) {
    return tail.reduce(function(acc, item) { return { ...acc, [item[3].key]: item[3].value }; }, head);
  }
  function peg$f31(key, value) {
    return { key, value };
  }
  function peg$f32(name, params) {
    return { type: 'Shader', name, params };
  }
  function peg$f33(head, tail) {
    return tail.reduce(function(acc, item) { return { ...acc, [item[3].key]: item[3].value }; }, head);
  }
  function peg$f34(key, value) {
    return { key, value };
  }
  function peg$f35(target, overlay, params) {
    return { type: 'Overlay', target, overlay, params };
  }
  function peg$f36(target, other, params) {
    return { type: 'Composite', target, other, params };
  }
  function peg$f37(head, tail) {
    return tail.reduce(function(acc, item) { return { ...acc, [item[3].key]: item[3].value }; }, head);
  }
  function peg$f38(key, value) {
    return { key, value };
  }
  function peg$f39(left, op, right) {
    return { type: 'Binary', op, left, right };
  }
  function peg$f40(expr) {    return expr;  }
  function peg$f41(name, params) {
    return { type: 'Call', name, params: params || [] };
  }
  function peg$f42(head, tail) {
    var acc = {};
    if (head.key) {
      acc[head.key] = head.value;
    } else {
      acc = head;
    }
    for (var i = 0; i < tail.length; i++) {
      var item = tail[i][3];
      if (typeof item === 'object' && item.key) {
        acc[item.key] = item.value;
      } else {
        // ignore
      }
    }
    return acc;
  }
  function peg$f43(key, value) {    return { key, value };  }
  function peg$f44(name, params, body) {
    var filtered = [];
    for (var i = 0; i < body.length; i++) {
      if (body[i][0] !== null) filtered.push(body[i][0]);
    }
    return { type: 'Function', name, params: params || [], body: filtered };
  }
  function peg$f45(head, tail) {
    return [head, ...tail.map(function(t) { return t[3]; })];
  }
  function peg$f46(name, type, def) {
    return { name, type, default: def ? def[3] : null };
  }
  function peg$f47(name) {    return name.join('');  }
  function peg$f48(num) {    return parseFloat(num.join(''));  }
  function peg$f49(chars) {    return chars.join('');  }
  function peg$f50(chars) {    return chars.join('');  }
  function peg$f51() {    return true;  }
  function peg$f52() {    return false;  }
  let peg$currPos = options.peg$currPos | 0;
  let peg$savedPos = peg$currPos;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = peg$currPos;
  let peg$maxFailExpected = options.peg$maxFailExpected || [];
  let peg$silentFails = options.peg$silentFails | 0;

  let peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos,
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$getUnicode(pos = peg$currPos) {
    const cp = input.codePointAt(pos);
    if (cp === undefined) {
      return "";
    }
    return String.fromCodePoint(cp);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text, ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase, unicode) {
    return { type: "class", parts, inverted, ignoreCase, unicode };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description };
  }

  function peg$computePosDetails(pos) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    const res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseParser() {
    let s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = [];
    s3 = peg$currPos;
    s4 = peg$parseStatement();
    if (s4 !== peg$FAILED) {
      s5 = peg$parse__();
      if (s5 !== peg$FAILED) {
        s4 = [s4, s5];
        s3 = s4;
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
    } else {
      peg$currPos = s3;
      s3 = peg$FAILED;
    }
    while (s3 !== peg$FAILED) {
      s2.push(s3);
      s3 = peg$currPos;
      s4 = peg$parseStatement();
      if (s4 !== peg$FAILED) {
        s5 = peg$parse__();
        if (s5 !== peg$FAILED) {
          s4 = [s4, s5];
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
    }
    peg$savedPos = s0;
    s0 = peg$f0(s2);

    return s0;
  }

  function peg$parse__() {
    let s0, s1;

    s0 = [];
    s1 = input.charAt(peg$currPos);
    if (peg$r0.test(s1)) {
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s1 !== peg$FAILED) {
      while (s1 !== peg$FAILED) {
        s0.push(s1);
        s1 = input.charAt(peg$currPos);
        if (peg$r0.test(s1)) {
          peg$currPos++;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e0); }
        }
      }
    } else {
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parse_() {
    let s0, s1;

    s0 = [];
    s1 = input.charAt(peg$currPos);
    if (peg$r0.test(s1)) {
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    while (s1 !== peg$FAILED) {
      s0.push(s1);
      s1 = input.charAt(peg$currPos);
      if (peg$r0.test(s1)) {
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e0); }
      }
    }

    return s0;
  }

  function peg$parseStatement() {
    let s0;

    s0 = peg$parseComment();
    if (s0 === peg$FAILED) {
      s0 = peg$parseImportStatement();
      if (s0 === peg$FAILED) {
        s0 = peg$parseInputStatement();
        if (s0 === peg$FAILED) {
          s0 = peg$parseVariableAssignment();
          if (s0 === peg$FAILED) {
            s0 = peg$parseTimeBlock();
            if (s0 === peg$FAILED) {
              s0 = peg$parseOutputStatement();
              if (s0 === peg$FAILED) {
                s0 = peg$parseFunctionDef();
                if (s0 === peg$FAILED) {
                  s0 = peg$parseEmptyStatement();
                }
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseComment() {
    let s0, s1, s2, s3, s4, s5;
